fix some cross references

--- a/python-school/data_files/1-lines-sol.ipynb
+++ b/python-school/data_files/1-lines-sol.ipynb
@@ -950,7 +950,7 @@
     "\n",
     "✪✪✪ This exercise is more challenging, if you are a beginner you might skip it and go on to CSVs\n",
     "\n",
-    "The book Dive into Python is nice and for the italian version there is a PDF, which has a problem though: if you try to print it, you will discover that the index is missing. Without despairing, we found a program to extract titles in a file as follows, but you will discover it is not exactly nice to see. Since we are Python ninjas, we decided to transform raw titles in a [real table of contents](http://softpython.readthedocs.io/it/latest/_static/toc-immersione-in-python-3.txt). Sure enough there are smarter ways to do this, like loading the pdf in Python with an appropriate module for pdfs, still this makes for an interesting exercise.\n",
+    "The book Dive into Python is nice and for the italian version there is a PDF, which has a problem though: if you try to print it, you will discover that the index is missing. Without despairing, we found a program to extract titles in a file as follows, but you will discover it is not exactly nice to see. Since we are Python ninjas, we decided to transform raw titles in a [real table of contents](data/immersione-in-python-toc.txt). Sure enough there are smarter ways to do this, like loading the pdf in Python with an appropriate module for pdfs, still this makes for an interesting exercise.\n",
     "\n",
     "You are given the file `immersione-in-python-toc.txt`:\n",
     "\n",
