--- a/python-school/functions/fun2-errors-and-testing-sol.ipynb
+++ b/python-school/functions/fun2-errors-and-testing-sol.ipynb
@@ -844,7 +844,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the part about [Foundations - A.3 Basic Algorithms](https://en.softpython.org/index.html#basic-algorithms), we often use `assert` to perform tests, that is, to verify a function behaves as expected.\n",
+    "During the remainder of this course, we will often use `assert` to perform tests, that is, to verify a function behaves as expected.\n",
     "\n",
     "Look for example at this function:"
    ]
