--- a/python-school/dataframes/1-basics-sol.ipynb
+++ b/python-school/dataframes/1-basics-sol.ipynb
@@ -1547,7 +1547,7 @@
    "id": "c9e67d1b",
    "metadata": {},
    "source": [
-    "It's possible to combine conditions like we already did in [Numpy filtering](https://en.softpython.org/matrices-numpy/matrices-numpy1-sol.html#Filtering): for example by using the special operator conjunction `&` :"
+    "It's possible to combine conditions like we already did in [Numpy filtering](array_select): for example by using the special operator conjunction `&` :"
    ]
   },
   {
