very small text changes

--- a/python-school/dataframes/2-advanced-sol.ipynb
+++ b/python-school/dataframes/2-advanced-sol.ipynb
@@ -143,6 +143,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "51088276",
+   "metadata": {},
+   "source": [
+    "### With Matplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9f3162d6",
    "metadata": {},
    "source": [
@@ -177,6 +185,14 @@
    "metadata": {},
    "source": [
     "Note the use of the `data` argument in which we pass a dataframe, exactly as we did with a dictionary in [here](plt_inputs). Here we filtered protests with more than 10000 participants for visualization purposes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "503133a2",
+   "metadata": {},
+   "source": [
+    "### With hvplot"
    ]
   },
   {
@@ -575,7 +591,7 @@
    "source": [
     "## Aggregate\n",
     "\n",
-    "Here we'll cover the very basics of Dataframe aggregation. Head over to the [documentation](https://docs.pola.rs/user-guide/expressions/aggregation) for more."
+    "Here we'll cover the very basics of Dataframe aggregation. To go further, you can check out the [documentation](https://docs.pola.rs/user-guide/expressions/aggregation)."
    ]
   },
   {
@@ -661,7 +677,7 @@
    "id": "d1e5740e",
    "metadata": {},
    "source": [
-    "```{note}\n",
+    "```{seealso}\n",
     "For an extensive list of operations that give aggregate results, see [the documentation](https://docs.pola.rs/api/python/stable/reference/expressions/aggregation.html).\n",
     "```"
    ]
@@ -2140,8 +2156,8 @@
     "This is to be read from the bottom up. As you can see, the filter has been *pushed down* to the very moment data is read! Which does make a lot of sense, doesn't it?\n",
     "\n",
     "To sum up, there are two main advantages of using Lazyframes:\n",
-    "- You get an automatic query optimization. So even if the code you wrote could be much more optimal, it will run as fast as it can. In other words, being lazy enables you to be dumb, and not suffer the consequences.\n",
-    "- As filters can be pushed down to the very moment data is read, you don't need to load all data in memory! This means that you could still analyse data files which are too big to fit in your computer memory!"
+    "- You get an automatic query optimization. So even if the code you wrote could be much more optimal, it will run as fast as it can. In other words, being lazy allows you to be dumb and not suffer the consequences.\n",
+    "- As filters can be pushed down to the very moment data is read, you don't need to load all data in memory. This means that you could analyse data files which are too big to fit in your computer memory!"
    ]
   },
   {
@@ -2156,7 +2172,7 @@
     "\n",
     "Data source: [dati.trentino.it](https://dati.trentino.it/dataset/strutture-sanitarie-dell-azienda-sanitaria-e-convenzionate) Licenza: [Creative Commons Attribution 4.0](http://creativecommons.org/licenses/by/4.0/deed.it)\n",
     "\n",
-    "Write a function which takes as input a town code and a text string, opens the file **lazily** and:\n",
+    "Write a function `strutsan` which takes as input a town code and a text string, opens the file **lazily** and:\n",
     "\n",
     "1. PRINTS also the number of found rows\n",
     "2. RETURNS a dataframe with selected only the rows having that town code and which contain the string in the column `ASSISTENZA`. The returned dataset must have only the columns \n",
@@ -2167,7 +2183,12 @@
    "cell_type": "code",
    "execution_count": 38,
    "id": "a48b01af",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "answer",
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "def strutsan(cod_comune, assistenza):\n",
