--- a/python-school/visualization/2-advanced-sol.ipynb
+++ b/python-school/visualization/2-advanced-sol.ipynb
@@ -141,7 +141,7 @@
     "As you can see, it reproduces the layout that can already be visualized from the list of lists passed as a first argument.\n",
     "\n",
     "```{admonition} Question\n",
-    "We've also seen how repeating a label can be used to make an Axes span more than one row. How would you then create a figure with three Axes on the first row, and a single one on a second row, which spans the whole width of the figure?\n",
+    "You can also see that repeating a label can be used to make an Axes span more than one row. How would you then create a figure with three Axes on the first row, and a single one on a second row, which spans the whole width of the figure?\n",
     "```"
    ]
   },
@@ -486,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So all cases above, we passed to `scatter` the values based on which the colors should be chosen from the argument `c`.\n",
+    "So in all cases above, we passed to `scatter` the values based on which the colors should be chosen from the argument `c`.\n",
     "\n",
     "If no other argument is passed, it uses a default colormap and uses the whole range of values.\n",
     "To change from this default, we can use the argument `cmap`, here giving the name of a specific colormap.\n",
