Add ref to `subplot_mosaic` guide

--- a/python-school/visualization/2-advanced-sol.ipynb
+++ b/python-school/visualization/2-advanced-sol.ipynb
@@ -207,6 +207,10 @@
    "source": [
     "```{note}\n",
     "While `plt.subplots()` returns a list or a list of lists of Axes, `plt.subplot_mosaic()` returns a dictionary of Axes. That's one of the reason that makes `plt.subplot_mosaic()` a better choice, generally. Indeed, to get a specific Axes, you just need to specify its label, which is much more natural and convenient than to remember where it is placed on your figure, and how that translates to indices in the list of lists of Axes.\n",
+    "```\n",
+    "\n",
+    "```{seealso}\n",
+    "To see all the customisation that `plt.subplot_mosaic()` enables, check out its [associated guide](https://matplotlib.org/stable/users/explain/axes/mosaic.html).\n",
     "```"
    ]
   },
