Polish sections' intro

--- a/python-school/dataframes/2-advanced-sol.ipynb
+++ b/python-school/dataframes/2-advanced-sol.ipynb
@@ -1088,7 +1088,10 @@
    "id": "849d02f6",
    "metadata": {},
    "source": [
-    "## Joining tables"
+    "## Joining tables\n",
+    "\n",
+    "Suppose we want to add a column to `protests` with the population of each country, to compute the proportion of the population that participated in each protest, for instance.\n",
+    "To do so, we would need to *join* our dataset with another one containing such information."
    ]
   },
   {
@@ -1098,7 +1101,7 @@
    "source": [
     "### Getting another table\n",
     "\n",
-    "Suppose we want to add a column with the population of each country, to compute the proportion of the population that participated in protests, for instance. To do so, we would need to join our dataset with another one containing such information. Let's take for example the dataset [countries_pop.csv](data/countries_pop.csv), from the [World Bank](https://data.worldbank.org/indicator/SP.POP.TOTL):"
+    "To get the population of each country, we can take for example the dataset [countries_pop.csv](data/countries_pop.csv), from the [World Bank](https://data.worldbank.org/indicator/SP.POP.TOTL):"
    ]
   },
   {
@@ -1847,7 +1850,15 @@
    "id": "9033a9c9",
    "metadata": {},
    "source": [
-    "A great strength of Polars is its lazy mode. In this mode, instead of working with *Dataframes*, you work with *Lazyframes*. The big difference between the two is that, while the Dataframes actually hold *data*, Lazyframes just hold *a set of operations* to execute.\n",
+    "A great strength of Polars is its lazy mode. In this mode, instead of working with *Dataframes*, you work with *Lazyframes*. The big difference between the two is that, while the Dataframes actually hold *data*, Lazyframes just hold *a set of operations* to execute."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47caa596",
+   "metadata": {},
+   "source": [
+    "### Working with a Lazyframe\n",
     "\n",
     "The first way to obtain a Lazyframe is to call the `.lazy()` method on an existing Dataframe, like so:"
    ]
