--- a/python-school/data_files/3-json-sol.ipynb
+++ b/python-school/data_files/3-json-sol.ipynb
@@ -16,7 +16,7 @@
     "A json is simply a text file, structured as _a tree._ Let's see an example, extracted from the data Bike sharing stations of Lavis municipality as found on  dati.trentino : \n",
     "\n",
     "- Data source: [dati.trentino.it](https://dati.trentino.it/dataset/stazioni-bike-sharing-emotion-trentino) - Trasport Service of the Autonomous Province of Trento\n",
-    "- License: [CC-BY 4.0](http://creativecommons.org/licenses/by/4.0/deed.it)"
+    "- License: [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)"
    ]
   },
   {
