--- a/python-school/dataframes/2-advanced-sol.ipynb
+++ b/python-school/dataframes/2-advanced-sol.ipynb
@@ -2180,8 +2180,8 @@
     "\n",
     "✪✪ Let's examine the dataset [SANSTRUT001.csv](data/SANSTRUT001.csv) which contains the healthcare facilities of Trentino region, and for each tells the type of assistance it offers (clinical activity, diagnostics, etc), the code and name of the communality where it is located.\n",
     "\n",
-    "\n",
-    "Data source: [dati.trentino.it](https://dati.trentino.it/dataset/strutture-sanitarie-dell-azienda-sanitaria-e-convenzionate) Licenza: [Creative Commons Attribution 4.0](http://creativecommons.org/licenses/by/4.0/deed.it)\n",
+    "- Data source: [dati.trentino.it](https://dati.trentino.it/dataset/strutture-sanitarie-dell-azienda-sanitaria-e-convenzionate)\n",
+    "- License: [Creative Commons Attribution 4.0](https://creativecommons.org/licenses/by/4.0)\n",
     "\n",
     "Write a function `strutsan` which takes as input a town code and a text string, opens the file **lazily** and:\n",
     "\n",
