--- a/python-school/dataframes/1-basics-sol.ipynb
+++ b/python-school/dataframes/1-basics-sol.ipynb
@@ -220,7 +220,7 @@
    "metadata": {},
    "source": [
     "```{admonition} Question\n",
-    "In the second case, adding the `null` entry enables Polars to comply with an important property of dataframes. Which one?\n",
+    "In the second case, adding the `null` entry to the output enables Polars to comply with an important property of dataframes. Which one?\n",
     "```\n",
     "\n",
     "```{admonition} Answer\n",
@@ -323,7 +323,7 @@
    "source": [
     "Here it is!\n",
     "\n",
-    "Note that here, we dealt with a simple, well-formatted file. In the wild (aka, \"the Internet\"), you will not always meet such well-behaved data though. In that case you'll probably need to specify one of the (many) arguments of `read_csv`. Inspect the function to take a quick look! "
+    "Note that here, we dealt with a simple, well-formatted file. In the wild (aka, \"the Internet\"), you will not always meet such well-behaved data. In that case you'll probably need to specify one of the (many) arguments of `read_csv`. Inspect the function to take a quick look! "
    ]
   },
   {
@@ -515,7 +515,7 @@
    "id": "42ee1cec",
    "metadata": {},
    "source": [
-    "Finally, you can take a quick glimpse at it, featuring the two pieces of info we got above, plus the data types and a few values with `.glimpse()`:"
+    "Finally, you can take a quick glimpse at it, featuring the two pieces of info we got above, plus the data types and a few values, with `.glimpse()`:"
    ]
   },
   {
@@ -757,7 +757,7 @@
    "id": "e6244daf",
    "metadata": {},
    "source": [
-    "Turns out we do only have zeros and ones, save some nulls that denote an absence of data."
+    "Calling `pl.col()` therefore enabled us to perform an operation on the selected column! And about the latter, it indeed turns out we only have zeros and ones in there, save some nulls that denote an absence of data."
    ]
   },
   {
@@ -779,7 +779,7 @@
    "id": "212c89ed",
    "metadata": {},
    "source": [
-    "We can therefore safely transform this integer column into a boolean one, using the `.cast()` method, and (optionally) renaming it using `.alias()`:"
+    "We can subsequently safely transform this integer column into a boolean one, using the `.cast()` method, and (optionally) renaming it using `.alias()`:"
    ]
   },
   {
@@ -934,7 +934,7 @@
    "source": [
     "We've covered two cases here:\n",
     "- when you'd like to have a column filled with the same value, you will need to specify you're providing the literal value you want in each row with `pl.lit()`,\n",
-    "- when you want to provide directly all the values to put in rows, you will need `pl.Series()`."
+    "- when you want to provide directly all the distinct values to be put in rows, you will need `pl.Series()`."
    ]
   },
   {
@@ -1072,7 +1072,7 @@
    "id": "24e32bd5",
    "metadata": {},
    "source": [
-    "And now we just have to subtract `\"start_date\"` from `\"end_date\"` to get our duration! There is one small problem though. As you can see from the result above, when a protest occurred over one day, the `start_date` and `end_date` are identical. There is a simple solution though: we can add a duration of one day to every entry by adding `pl.duration(days=1)`. That works exactly like adding a scalar to a NumPy array: the value is added to each element. "
+    "And now we just have to subtract `\"start_date\"` from `\"end_date\"` to get our duration! There is one small problem though. As you can see from the result above, when a protest occurred over one day, the `start_date` and `end_date` are identical. There is a simple solution to that: we can add a duration of one day to every entry by adding `pl.duration(days=1)`. That works exactly like adding a scalar to a NumPy array: the value is added to each element. "
    ]
   },
   {
