Add paragraph making spreadsheet parallel

--- a/python-school/dataframes/1-basics-sol.ipynb
+++ b/python-school/dataframes/1-basics-sol.ipynb
@@ -2201,12 +2201,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "896fd8bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## A parallel with spreadsheets\n",
+    "\n",
+    "You're probably familiar with some spreadsheets software, such as Excel or Google Sheets.\n",
+    "To make an analogy, you can picture a dataframe as a single sheet, which in Python is stored as a variable.\n",
+    "Then, if you do not reassign this variable, the dataframe stays the same -- so in the analogy, the sheet is untouched.\n",
+    "So while in a spreadsheet, you'd compute for instance the sum of a column in a cell on the same sheet, in Python, you'd assign the result of the sum to a new variable, that is, to a new sheet.\n",
+    "Same goes for filtering or reordering the rows: if you do not explicitly override the original variable, the original data stays intact."
+   ]
   }
  ],
  "metadata": {
