Ensure no answer made it to student handouts

--- a/python-school/data_files/3-json-sol.ipynb
+++ b/python-school/data_files/3-json-sol.ipynb
@@ -353,7 +353,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "answer",
+     "hide-input"
+    ]
+   },
    "source": [
     "```{admonition} Answer\n",
     ":class: tip dropdown\n",
