--- a/python-school/dataframes/2-advanced-sol.ipynb
+++ b/python-school/dataframes/2-advanced-sol.ipynb
@@ -947,6 +947,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74661414",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "fig"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4d6901da",
    "metadata": {},
@@ -1187,8 +1201,19 @@
    "source": [
     "```{admonition} Question\n",
     "Having seen that, can you guess what the problem was? How is this file different from the ones we've seen previously?\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c3ab214",
+   "metadata": {
+    "tags": [
+     "hide-input",
+     "answer"
+    ]
+   },
+   "source": [
     "```{admonition} Answer\n",
     ":class: tip dropdown\n",
     "The 4 first lines actually contain some metadata about the file, and the header specifying column names is only on the 5th line! That's why Polars complains about the Schema, it thought that the first line was defining the columns, but then found more columns in following lines. Fortunately, Polars lets us skip rows from CSV files, using the `skip_rows` argument.\n",
@@ -2013,8 +2038,19 @@
    "source": [
     "```{admonition} Question\n",
     "Why is this not very smart? How could we make this operation more efficient?\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57a70702",
+   "metadata": {
+    "tags": [
+     "answer",
+     "hide-input"
+    ]
+   },
+   "source": [
     "```{admonition} Answer\n",
     ":class: tip dropdown\n",
     "Because we're computing this median for every single country, while we're only interested in Italy here! The `filter()` should be called directly after reading the CSV.\n",
