--- a/python-school/numpy/1-basics-sol.ipynb
+++ b/python-school/numpy/1-basics-sol.ipynb
@@ -1356,7 +1356,12 @@
   {
    "cell_type": "markdown",
    "id": "81959530",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "answer",
+     "hide-input"
+    ]
+   },
    "source": [
     "```{admonition} Answer\n",
     ":class: tip dropdown\n",
@@ -1944,7 +1949,12 @@
   {
    "cell_type": "markdown",
    "id": "e7fd6772",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "answer",
+     "hide-input"
+    ]
+   },
    "source": [
     "```{admonition} Answer\n",
     ":class: tip dropdown\n",
