--- a/python-school/dataframes/1-basics-sol.ipynb
+++ b/python-school/dataframes/1-basics-sol.ipynb
@@ -835,9 +835,19 @@
     "```python\n",
     "protests.select(\"protesterviolence\".cast(bool))\n",
     "```\n",
-    "````\n",
-    "\n",
-    "\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bd513f7",
+   "metadata": {
+    "tags": [
+     "answer",
+     "hide-input"
+    ]
+   },
+   "source": [
     "```{admonition} Answer\n",
     ":class: tip dropdown\n",
     "\n",
@@ -1984,6 +1994,20 @@
      "hide-input"
     ]
    },
+   "outputs": [],
+   "source": [
+    "game = pl.read_csv('data/game-of-thrones.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ff3ecec9",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -2020,13 +2044,12 @@
        "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "game = pl.read_csv('data/game-of-thrones.csv')\n",
     "game.head()"
    ]
   },
@@ -2045,22 +2068,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "ec39a0dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "favorite = {\n",
-    "    \"Paolo\" : 'Winter Is',\n",
-    "    \"Chiara\" : 'Wolf and the Lion',\n",
-    "    \"Anselmo\" : 'Fire and',\n",
-    "    \"Letizia\" : 'Garden of'\n",
+    "    \"Paolo\": \"Winter Is\",\n",
+    "    \"Chiara\": \"Wolf and the Lion\",\n",
+    "    \"Anselmo\": \"Fire and\",\n",
+    "    \"Letizia\": \"Garden of\",\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "2395c320",
    "metadata": {
     "tags": [
@@ -2097,7 +2120,7 @@
        "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2107,6 +2130,53 @@
     "    pl.col(\"Title\").str.contains(favorite[\"Paolo\"])\n",
     "    | pl.col(\"Title\").str.contains(favorite[\"Chiara\"])\n",
     ")\n",
+    "fav_episodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "86d941ff",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (2, 10)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>No. overall</th><th>No. in season</th><th>Season</th><th>Title</th><th>Directed by</th><th>Written by</th><th>Novel(s) adapted</th><th>Original air date</th><th>U.S. viewers(millions)</th><th>Imdb rating</th></tr><tr><td>i64</td><td>i64</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>1</td><td>1</td><td>1</td><td>&quot;&quot;Winter Is Coming&quot;&quot;</td><td>&quot;Tim Van Patten&quot;</td><td>&quot;David Benioff &amp; D. B. Weiss&quot;</td><td>&quot;A Game of Thrones&quot;</td><td>&quot;17-Apr-11&quot;</td><td>2.22</td><td>9.1</td></tr><tr><td>5</td><td>5</td><td>1</td><td>&quot;&quot;The Wolf and the Lion&quot;&quot;</td><td>&quot;Brian Kirk&quot;</td><td>&quot;David Benioff &amp; D. B. Weiss&quot;</td><td>&quot;A Game of Thrones&quot;</td><td>&quot;15-May-11&quot;</td><td>2.58</td><td>9.1</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (2, 10)\n",
+       "┌─────────┬────────┬────────┬──────────────┬───┬──────────────┬─────────────┬─────────────┬────────┐\n",
+       "│ No.     ┆ No. in ┆ Season ┆ Title        ┆ … ┆ Novel(s)     ┆ Original    ┆ U.S. viewer ┆ Imdb   │\n",
+       "│ overall ┆ season ┆ ---    ┆ ---          ┆   ┆ adapted      ┆ air date    ┆ s(millions) ┆ rating │\n",
+       "│ ---     ┆ ---    ┆ i64    ┆ str          ┆   ┆ ---          ┆ ---         ┆ ---         ┆ ---    │\n",
+       "│ i64     ┆ i64    ┆        ┆              ┆   ┆ str          ┆ str         ┆ f64         ┆ f64    │\n",
+       "╞═════════╪════════╪════════╪══════════════╪═══╪══════════════╪═════════════╪═════════════╪════════╡\n",
+       "│ 1       ┆ 1      ┆ 1      ┆ \"Winter Is   ┆ … ┆ A Game of    ┆ 17-Apr-11   ┆ 2.22        ┆ 9.1    │\n",
+       "│         ┆        ┆        ┆ Coming\"      ┆   ┆ Thrones      ┆             ┆             ┆        │\n",
+       "│ 5       ┆ 5      ┆ 1      ┆ \"The Wolf    ┆ … ┆ A Game of    ┆ 15-May-11   ┆ 2.58        ┆ 9.1    │\n",
+       "│         ┆        ┆        ┆ and the      ┆   ┆ Thrones      ┆             ┆             ┆        │\n",
+       "│         ┆        ┆        ┆ Lion\"        ┆   ┆              ┆             ┆             ┆        │\n",
+       "└─────────┴────────┴────────┴──────────────┴───┴──────────────┴─────────────┴─────────────┴────────┘"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "fav_episodes"
    ]
   },
@@ -2124,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "5b7f5d5e",
    "metadata": {
     "tags": [
@@ -2135,12 +2205,12 @@
    "outputs": [],
    "source": [
     "def first_aired(df, year):\n",
-    "    return df.filter(pl.col(\"Original air date\").str.slice(-2) == str(year))"
+    "    return df.filter(pl.col(\"Original air date\").str.slice(-2) == str(year)[2:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "e8e9a1d7",
    "metadata": {},
    "outputs": [
@@ -2191,13 +2261,13 @@
        "└─────────┴────────┴────────┴───────────────┴───┴──────────┴───────────────┴──────────────┴────────┘"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "first_aired(game, 17)"
+    "first_aired(game, 2017)"
    ]
   },
   {
