--- a/python-school/visualization/1-basics-sol.ipynb
+++ b/python-school/visualization/1-basics-sol.ipynb
@@ -718,7 +718,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "tags": [
+          "answer",
+          "hide-input"
+        ]
+      },
       "source": [
         "```{admonition} Answer\n",
         ":class: tip dropdown\n",
