better text in intro and JSONL

--- a/python-school/data_files/3-json-sol.ipynb
+++ b/python-school/data_files/3-json-sol.ipynb
@@ -13,17 +13,7 @@
    "source": [
     "JSON is a more elaborated format, widely used in the world of web applications.\n",
     "\n",
-    "A json is simply a text file, structured as _a tree._ Let's see an example, extracted from the data Bike sharing stations of Lavis municipality as found on  dati.trentino : \n",
-    "\n",
-    "- Data source: [dati.trentino.it](https://dati.trentino.it/dataset/stazioni-bike-sharing-emotion-trentino) - Trasport Service of the Autonomous Province of Trento\n",
-    "- License: [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As you can see, the json format is very similar to data structures we already have in Python, such as strings, integer numbers, floats, lists and dictionaries. The only difference are the json `null` fields which become `None` in Python. So the conversion to Python is almost always easy and painless, to perform it you can use the native Python module called `json`. Let's first import it: "
+    "As for CSVs, Python has a dedicated built-in library to read them, let's start by importing it: "
    ]
   },
   {
@@ -34,6 +24,52 @@
    "source": [
     "import json\n",
     "from pprint import pprint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A json is simply a text file, structured as _a tree_. \n",
+    "\n",
+    "Let's see an example, extracted from the data Bike sharing stations of Lavis municipality as found on dati.trentino: \n",
+    "\n",
+    "- Data source: [dati.trentino.it](https://dati.trentino.it/dataset/stazioni-bike-sharing-emotion-trentino) - Trasport Service of the Autonomous Province of Trento\n",
+    "- License: [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"name\": [\"Grazioli\", \"Pressano\", \"Stazione RFI\"], \"address\": [\"Piazza Grazioli - Lavis\", \"Piazza della Croce - Pressano\", \"Via Stazione - Lavis\"], \"id\": [\"Grazioli - Lavis\", \"Pressano - Lavis\", \"Stazione RFI - Lavis\"], \"bikes\": [3, 2, 4], \"slots\": [7, 5, 6], \"totalSlots\": [10, 7, 10], \"position\": [[46.139732902099794, 11.111516155225331], [46.15368174037716, 11.106601229430453], [46.148180371138814, 11.096753997622727]]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('data/bike-sharing-lavis-single.json') as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, the json format is very similar to data structures we already have in Python, such as strings, integer numbers, floats, lists and dictionaries. So the conversion to Python is almost always easy and painless, with the help of the `json` library."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "This format is commonly used to save raw data collected from online sources. For instance, the most raw form of a post from Twitter, Wikipedia, Reddit, Telegram, or other sources is JSON. Since such objects may change with time -- let's say some billionaire buys one of these and decides to add the number of views on each post --, using this format allows them to send out data representing some type of object, without worrying about fields that may change over time. That is the power of this format: its flexibility. "
    ]
   },
   {
@@ -52,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +134,7 @@
        "dict"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +215,7 @@
        "list"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +248,7 @@
        " 'position': [46.139732902099794, 11.111516155225331]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +275,7 @@
        "'Piazza Grazioli - Lavis'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +302,7 @@
        "[46.139732902099794, 11.111516155225331]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,9 +322,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## JSONL\n",
+    "## Newline-delimited JSONs\n",
     "\n",
-    "There is a particular JSON file type which is called [JSONL](http://jsonlines.org/) (note the _L_ at the end), which is a text file containing a sequence of lines, each representing a valid json object.\n",
+    "There is a particular JSON file type which is called [`JSONL`](http://jsonlines.org/) (note the L for \"lines\" at the end), or `NDJSON` (ND for \"Newline-Delimited\"), which is a text file containing a sequence of lines, each representing a valid json object.\n",
     "\n",
     "Let's have a look at the file [employees.jsonl](data/employees.jsonl):"
    ]
@@ -313,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +383,7 @@
    "metadata": {},
    "source": [
     "```{admonition} Question\n",
-    "Here, we could also have first read all the lines with `f.readlines()`, and then iterate over them. Could you guess which option is better? Using `f.readlines()` or iterating over `f`? Why?\n",
+    "Here, we could also have first read all the lines with `f.readlines()`, and then iterated over them. Could you guess which option is better? Using `f.readlines()` or iterating over `f`? Why?\n",
     "```"
    ]
   },
@@ -371,14 +407,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This format is commonly used to save raw data collected from online sources. For instance, the most raw form of a post from Twitter, Wikipedia, Reddit, Telegram, or other sources is JSON. Since such objects may change with time -- let's say some billionaire buys one of these and decides to add the number of views on each post --, it allows them to send out JSONs with changing fields other time. That is the power of this format: its flexibility. \n",
-    "\n",
     "In a line-delimited file, each line can be read completely independently from the previous one. Reversely, a new line can be added to the file with the same level of independence. For instance, let's say we wanted to add a new employee to the previous file, but this time we have information about their age. We can simply add them as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,15 +429,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we use the flag `\"a\"` to signify we want to _**a**ppend_ content to the file. This way, no need to read the whole file again in order to add content to it."
+    "Here we use the flag `\"a\"` to signify we want to _**a**ppend_ content to the file. This way, no need to read the whole file again in order to add content to it!\n",
+    "We used `json.dumps` to transform our Python object into a valid JSON string -- hence the name, you're **dump**ing it into a **s**tring. We then write our JSON string into the file, adding the newline character `\\n` at the end to make room for a potential future dump.\n",
+    "\n",
+    "```{admonition} Question\n",
+    "Which format do you think is better between a newline-delimited JSON and a list-of-dictionaries JSON? Why?\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "answer",
+     "hide-input"
+    ]
+   },
+   "source": [
+    "```{admonition} Answer\n",
+    ":class: tip dropdown\n",
+    "The newline-delimited version: it makes it very easy to read or append a single line, independently of the rest of the file.\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
