very small text changes

--- a/python-school/data_files/2-csv-sol.ipynb
+++ b/python-school/data_files/2-csv-sol.ipynb
@@ -629,7 +629,7 @@
    "source": [
     "## Exercise - air quality\n",
     "\n",
-    "You will now analyze air_quality in Trentino. You are given a dataset which records various pollutants  ('Inquinante') at various stations (`'Stazione'`) in Trentino. Pollutants values can be `'PM10'`, `'Biossido Zolfo'`, and a few others. Each station records some set of pollutants. For each pollutant values are recorded (`'Valore'`) 24 times per day.\n",
+    "You will now analyze data about air quality in Trentino. You are given a dataset which records various pollutants  ('Inquinante') at various stations (`'Stazione'`) in Trentino. Pollutants values can be `'PM10'`, `'Biossido Zolfo'`, and a few others. Each station records some set of pollutants. For each pollutant values are recorded (`'Valore'`) 24 times per day.\n",
     "\n",
     "Data provider: [dati.trentino.it](https://dati.trentino.it/dataset/qualita-dell-aria-rilevazioni-delle-stazioni-monitoraggio) \n",
     "\n",
