--- a/python-school/functions/fun1-def-sol.ipynb
+++ b/python-school/functions/fun1-def-sol.ipynb
@@ -61,13 +61,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c9e3627c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'function'>\n"
+     ]
+    }
+   ],
    "source": [
     "def fun():\n",
-    "    \"here we enter an indented block\""
+    "    \"here we enter an indented block\"\n",
+    "\n",
+    "print(type(fun))"
    ]
   },
   {
@@ -75,6 +85,8 @@
    "id": "d6a0c6fa",
    "metadata": {},
    "source": [
+    "So you actually just assigned a function object to the variable `fun` with this little piece of code.\n",
+    "\n",
     "As you can see, there's more after the `def fun`: you open a pair of brackets, close it, add a colon `:`, and then write more things on the following line, indented by four spaces.\n",
     "\n",
     "So, first, what are the brackets for? They should be there to have something written in them, right?\n",
