--- a/python-school/mixed-structures/2-mixed-structures-sol.ipynb
+++ b/python-school/mixed-structures/2-mixed-structures-sol.ipynb
@@ -73,51 +73,36 @@
    "outputs": [],
    "source": [
     "managers_db = [\n",
-    "  {\n",
-    "    \"name\":    \"Alessandro\",\n",
-    "    \"surname\": \"Borgoloso\",\n",
-    "    \"age\":     34,\n",
-    "    \"company\": {\n",
-    "                   \"name\": \"Candied Herrings\",\n",
-    "                   \"sector\":\"Food\"\n",
-    "               }\n",
-    "  },    \n",
-    "  { \n",
-    "    \"name\":    \"Matilda\",\n",
-    "    \"surname\": \"Delle Sòle\",\n",
-    "    \"age\":     25,\n",
-    "    \"company\": {\n",
-    "                    \"name\": \"Pythonic Footwear\",\n",
-    "                    \"sector\":\"Fashion\"\n",
-    "               }\n",
-    "  },        \n",
-    "  {\n",
-    "    \"name\":    \"Alfred\",\n",
-    "    \"surname\": \"Pennyworth\",\n",
-    "    \"age\":     20,\n",
-    "    \"company\": {\n",
-    "                    \"name\": \"Batworks\",\n",
-    "                    \"sector\":\"Fashion\"\n",
-    "               }\n",
-    "  },\n",
-    "  { \n",
-    "    \"name\":    \"Arianna\",\n",
-    "    \"surname\": \"Schei\",\n",
-    "    \"age\":     37,\n",
-    "    \"company\": {\n",
-    "                    \"name\": \"MegaDiamonds Unlimited\",\n",
-    "                    \"sector\":\"Precious stones\"\n",
-    "               }\n",
-    "  },    \n",
-    "  {\n",
-    "    \"name\":    \"Antonione\",\n",
-    "    \"surname\": \"Cannavacci\",\n",
-    "    \"age\":     25,\n",
-    "    \"company\": {\n",
-    "                    \"name\": \"Pre-chewed Chewing gums\",\n",
-    "                    \"sector\":\"Food\"\n",
-    "               }\n",
-    "  },    \n",
+    "    {\n",
+    "        \"name\": \"Alessandro\",\n",
+    "        \"surname\": \"Borgoloso\",\n",
+    "        \"age\": 34,\n",
+    "        \"company\": {\"name\": \"Candied Herrings\", \"sector\": \"Food\"},\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Matilda\",\n",
+    "        \"surname\": \"Delle Sòle\",\n",
+    "        \"age\": 25,\n",
+    "        \"company\": {\"name\": \"Pythonic Footwear\", \"sector\": \"Fashion\"},\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Alfred\",\n",
+    "        \"surname\": \"Pennyworth\",\n",
+    "        \"age\": 20,\n",
+    "        \"company\": {\"name\": \"Batworks\", \"sector\": \"Fashion\"},\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Arianna\",\n",
+    "        \"surname\": \"Schei\",\n",
+    "        \"age\": 37,\n",
+    "        \"company\": {\"name\": \"MegaDiamonds Unlimited\", \"sector\": \"Precious stones\"},\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Antonione\",\n",
+    "        \"surname\": \"Cannavacci\",\n",
+    "        \"age\": 25,\n",
+    "        \"company\": {\"name\": \"Pre-chewed Chewing gums\", \"sector\": \"Food\"},\n",
+    "    },\n",
     "]"
    ]
   },
@@ -706,30 +691,24 @@
     "assert actorswap([]) == []\n",
     "\n",
     "orig_film = films1[0]\n",
-    "res2 = actorswap(films1) \n",
-    "assert res2 == [ {'title': 'Pretty Woman',\n",
-    "                   'year': 1990,\n",
-    "                   'Vivian':'Edward'},\n",
-    "                 {'title': 'Titanic',\n",
-    "                  'year': 1997,\n",
-    "                  'Rose' : 'Jack'}\n",
-    "               ]\n",
-    "assert id(films1) != id(res2)            # must produce a NEW list\n",
+    "res2 = actorswap(films1)\n",
+    "assert res2 == [\n",
+    "    {\"title\": \"Pretty Woman\", \"year\": 1990, \"Vivian\": \"Edward\"},\n",
+    "    {\"title\": \"Titanic\", \"year\": 1997, \"Rose\": \"Jack\"},\n",
+    "]\n",
+    "assert id(films1) != id(res2)  # must produce a NEW list\n",
     "assert id(orig_film) != id(res2[0])  # must produce a NEW dictionary\n",
-    "    \n",
-    "assert actorswap(films2) == [{'title': 'Jerry Maguire',\n",
-    "                          'year': 1996, \n",
-    "                          'Dorothy': 'Jerry'},\n",
-    "                         {'title': 'Superman',\n",
-    "                          'year': 1978, \n",
-    "                          'Lois': 'Kent'},\n",
-    "                         {'title': 'The Lord of the Rings',\n",
-    "                          'year': 2001, \n",
-    "                          'Arwen': 'Aragorn'},\n",
-    "                         {'title': 'Harry Potter and the Deathly Hallows, Part 2',\n",
-    "                          'year': 2011,\n",
-    "                          'Hermione': 'Ron Weasley',                             \n",
-    "                         }]"
+    "\n",
+    "assert actorswap(films2) == [\n",
+    "    {\"title\": \"Jerry Maguire\", \"year\": 1996, \"Dorothy\": \"Jerry\"},\n",
+    "    {\"title\": \"Superman\", \"year\": 1978, \"Lois\": \"Kent\"},\n",
+    "    {\"title\": \"The Lord of the Rings\", \"year\": 2001, \"Arwen\": \"Aragorn\"},\n",
+    "    {\n",
+    "        \"title\": \"Harry Potter and the Deathly Hallows, Part 2\",\n",
+    "        \"year\": 2011,\n",
+    "        \"Hermione\": \"Ron Weasley\",\n",
+    "    },\n",
+    "]"
    ]
   },
   {
